--- a/tests/manual/source/app_15/configmap.yml.j2
+++ b/tests/manual/source/app_15/configmap.yml.j2
@@ -4,7 +4,6 @@ apiVersion: v1
 metadata:
   name: prometheus-config
 data:
-{% for file in read_files('./tests/manual/source/app_15/files') %}
-  {{ file.name }}: |
-    {{ file.content | indent(4) }}
-{% endfor %}
+{%- filter indent(width=2) %}
+{% include_all_as_yaml_kv 'files' %}
+{% endfilter %}
