feat: add jinja2 extention to include files as yaml list

--- a/tests/manual/source/app_15/configmap.yml.j2
+++ b/tests/manual/source/app_15/configmap.yml.j2
@@ -5,5 +5,5 @@ metadata:
   name: prometheus-config
 data:
 {%- filter indent(width=2) %}
-{% include_all_as_yaml_kv 'files' %}
+{% include_all_as_yaml_kv 'files/' %}
 {% endfilter %}
