--- a/tests/manual/source/app_4/deployment.yml.j2
+++ b/tests/manual/source/app_4/deployment.yml.j2
@@ -12,16 +12,17 @@ metadata:
   name: thanos-sidecar-2
   namespace: {{ namespace }}
 data: |-
-{%- filter indent(width=4) %}
+{%- filter indent(width=2) %}
 {% include_raw 'files/file.json' %}
 {% endfilter %}
 
 data_2: |-
-{%- filter indent(width=4) %}
+{%- filter indent(width=2) %}
 {% include_raw 'files/file_2.yml' %}
 {% endfilter %}
 
 data_3: |-
-{%- filter indent(width=4) %}
+{%- filter indent(width=2) %}
 {% include 'files/file_3.yml.j2' %}
+var_2: {{ var_2 }}
 {% endfilter %}
