--- a/tests/manual/source/app_5/configmap.yml.j2
+++ b/tests/manual/source/app_5/configmap.yml.j2
@@ -15,3 +15,4 @@ data:
   number_string: "{{ number_string }}"
   number_string_2: "{{ number_string_2 }}"
   number_oct_string: "{{ number_oct_string }}"
+  boolean_string: "yes"
