--- a/tests/manual_deprecated/source/app_9/base/kustomization.yml.j2
+++ b/tests/manual_deprecated/source/app_9/base/kustomization.yml.j2
@@ -3,4 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - Deployment_prometheus.yml
+  - deployment_prometheus.yml
