Standardize jinja2 custom extension names
feat: add rawinclude_list and rawinclude_map custom jinja2 extension
misc: deprecate old custom jinja2 extensions

--- a/tests/e2e/source/app_16/configmap.yml.j2
+++ b/tests/e2e/source/app_16/configmap.yml.j2
@@ -7,5 +7,5 @@ data:
   key:
     another_key:
 {%- filter indent(width=6) %}
-{% include_all_as_yaml_list 'files/' %}
+{% include_list 'files/' %}
 {% endfilter %}
