--- a/examples/monitoring_stack/source/prometheus/ConfigMap.yml.j2
+++ b/examples/monitoring_stack/source/prometheus/ConfigMap.yml.j2
@@ -5,9 +5,9 @@ metadata:
   name: prometheus-config-template
   namespace: {{ monitoring.namespace }}
 data:
-  prometheus.yml.tmpl: |-
+  prometheus.yml: |-
 {%- filter indent(width=4) %}
-{% include 'files/prometheus.yml.tmpl.j2' %}
+{% include 'files/prometheus.yml.j2' %}
 {% endfilter %}
 ---
 kind: ConfigMap
