Fix prometheus configmap

--- a/examples/monitoring_stack/source/prometheus/ConfigMap.yml.j2
+++ b/examples/monitoring_stack/source/prometheus/ConfigMap.yml.j2
@@ -2,7 +2,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: prometheus-config-template
+  name: prometheus-config
   namespace: {{ monitoring.namespace }}
 data:
   prometheus.yml: |-
