--- a/examples/monitoring_stack/source/prometheus/Service.yml.j2
+++ b/examples/monitoring_stack/source/prometheus/Service.yml.j2
@@ -1,4 +1,4 @@
-{%- for i in range(monitoring.prometheus__n_replicas) %}
+{%- for i in range(monitoring.prometheus_n_replicas) %}
 ---
 apiVersion: v1
 kind: Service
