Fix node-exporter name

--- a/examples/monitoring_stack/source/node_exporter/kustomization.yml.j2
+++ b/examples/monitoring_stack/source/node_exporter/kustomization.yml.j2
@@ -8,4 +8,5 @@ helmCharts:
     releaseName: prometheus-node-exporter
     repo: oci://ghcr.io/prometheus-community/charts
     version: {{ monitoring.node_exporter_version }}
-    valuesInLine: {}
+    valuesInLine:
+      nameOverride: node-exporter
