Fix node-exporter name

--- a/examples/monitoring_stack/source/node_exporter/kustomization.yml.j2
+++ b/examples/monitoring_stack/source/node_exporter/kustomization.yml.j2
@@ -10,3 +10,4 @@ helmCharts:
     version: {{ monitoring.node_exporter_version }}
     valuesInLine:
       nameOverride: node-exporter
+      fullnameOverride: node-exporter
