--- a/examples/monitoring_stack/source/alertmanager/Service.yml.j2
+++ b/examples/monitoring_stack/source/alertmanager/Service.yml.j2
@@ -1,4 +1,4 @@
-{%- for i in range(monitoring.prometheus_n_replicas) %}
+{%- for i in range(monitoring.alertmanager_n_replicas) %}
 ---
 kind: Service
 apiVersion: v1
