--- a/tests/e2e_deprecated/source/app_16/configmap.yml.j2
+++ b/tests/e2e_deprecated/source/app_16/configmap.yml.j2
@@ -7,5 +7,5 @@ data:
   key:
     another_key:
 {%- filter indent(width=6) %}
-{% include_all_as_yaml_list 'files/' %}
+{% include_list 'files/' %}
 {% endfilter %}
